--- a/requirements.txt
+++ b/requirements.txt
@@ -9,25 +9,28 @@ attrs==23.2.0
 Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
-certifi==2023.11.17
+certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
 comm==0.2.1
+contourpy==1.2.0
+cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
-et-xmlfile==1.1.0
 exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.1
 fiona==1.9.5
+fonttools==4.47.2
 fqdn==1.5.1
-geopandas==0.14.2
+geopandas==0.14.3
 idna==3.6
 importlib-metadata==7.0.1
+importlib-resources==6.1.1
 ipykernel==6.29.0
 ipython==8.18.1
 isoduration==20.11.0
@@ -43,10 +46,12 @@ jupyter_client==8.6.0
 jupyter_core==5.7.1
 jupyter_server==2.12.5
 jupyter_server_terminals==0.5.2
-jupyterlab==4.0.11
+jupyterlab==4.0.12
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.2
-MarkupSafe==2.1.4
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.8.2
 matplotlib-inline==0.1.6
 mistune==3.0.2
 nbclient==0.9.0
@@ -55,14 +60,15 @@ nbformat==5.9.2
 nest-asyncio==1.6.0
 notebook_shim==0.2.3
 numpy==1.26.3
-openpyxl==3.1.2
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.0
 pandocfilters==1.5.1
 parso==0.8.3
 pexpect==4.9.0
-platformdirs==4.1.0
+pillow==10.2.0
+platformdirs==4.2.0
+plotly==5.18.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
@@ -70,10 +76,11 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.17.2
+pyparsing==3.1.1
 pyproj==3.6.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
-pytz==2023.3.post1
+pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
 referencing==0.33.0
@@ -87,6 +94,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
+tenacity==8.2.3
 terminado==0.18.0
 tinycss2==1.2.1
 tomli==2.0.1
@@ -96,7 +104,7 @@ types-python-dateutil==2.8.19.20240106
 typing_extensions==4.9.0
 tzdata==2023.4
 uri-template==1.3.0
-urllib3==2.1.0
+urllib3==2.2.0
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
